Добавлено 5 unit test'ов